--- a/Proyecto_integrador/app/src/main/res/layout/activity_login.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/activity_login.xml
@@ -1,114 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    tools:context=".LoginActivity"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/img_logo"
+        android:layout_width="match_parent"
+        android:layout_height="207dp"
+        app:srcCompat="@drawable/logo_transparent"/>
 
     <TextView
-        android:id="@+id/txt_registrate"
-        android:layout_width="129dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="92dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/registrate"
-        android:textAlignment="center"
-        android:textColor="#050505"
-        android:textColorHint="#000000"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="60dp"
-        android:text="@string/registro"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/txt_registrate" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginStart="30dp"
-        android:text="@string/login"
-        android:textColor="#6ABDA6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_registrate" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="381dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="130dp"
-        android:text="@string/inicia_sesion_aqui"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="381dp"
-        android:layout_height="54dp"
-        android:text="@string/registrate_aqu"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        android:id="@+id/txt_invitacion"
+        android:layout_width="match_parent"
+        style="@style/viewCustom"
+        android:paddingTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="Inicio Sesión"
+        android:textSize="15sp"
+        android:textColor="@color/black"/>
 
     <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="@string/usuario"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:drawableLeft="@drawable/ic_usuario"
-        android:drawablePadding="8dp"/>
-
-    <EditText
-        android:id="@+id/editTextText4"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
+        android:id="@+id/edt_Email"
+        style="@style/viewCustom"
+        android:hint="email"
         android:inputType="textEmailAddress"
-        android:hint="@string/correo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
-        android:drawableLeft="@drawable/ic_email"
-        android:drawablePadding="8dp"/>
+        android:paddingTop="30dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"/>
 
     <EditText
-        android:id="@+id/editTextText5"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:ems="10"
+        android:id="@+id/etPassword"
+        style="@style/viewCustom"
+        android:hint="password"
         android:inputType="textPassword"
-        android:hint="@string/contrasena"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
-        android:drawableLeft="@drawable/ic_pass"
-        android:drawablePadding="8dp"/>
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"/>
+    <TextView
+        android:id="@+id/txt_login"
+        style="@style/viewCustom"
+        android:background="@color/fondo_splash"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:textAlignment="center"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtForgotPassword"
+        style="@style/viewCustom"
+        android:onClick="forgotPassword"
+        android:paddingTop="0dp"
+        android:gravity="center_horizontal"
+        android:text="Olvidaste tu contraseña?"
+        android:textSize="12sp"
+        android:textColor="@color/black"/>
+
+    <LinearLayout
+        android:id="@+id/lyTerms"
+        style="@style/viewCustom"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/cbAcept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="He leído y acepto los"
+            android:textColor="@color/black"/>
+        <TextView
+            android:id="@+id/tvTerms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="términos y condiciones de uso"
+            android:textSize="10sp"
+            android:textColor="@color/orange"
+            android:layout_marginLeft="5dp"
+            android:onClick="goTerms"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_registrarse"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/fondo_splash"
+        android:paddingLeft="30dp"
+        android:text="Registrarse aquí"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
