--- a/Proyecto_integrador/app/src/main/res/layout/activity_registro.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/activity_registro.xml
@@ -1,18 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistroActivity">
+    tools:context=".RegistroActivity"
+    android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/img_logo"
+        android:layout_width="match_parent"
+        android:layout_height="207dp"
+        app:srcCompat="@drawable/logo_transparent"/>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Registro!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/txt_registrate"
+        android:layout_width="match_parent"
+        style="@style/viewCustom"
+        android:paddingTop="20dp"
+        android:gravity="center_horizontal"
+        android:text="Registrate"
+        android:textSize="15sp"
+        android:textColor="@color/black"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/edt_user"
+        style="@style/viewCustom"
+        android:hint="user"
+        android:inputType="text"
+        android:paddingTop="30dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"/>
+
+    <EditText
+        android:id="@+id/edt_Email"
+        style="@style/viewCustom"
+        android:hint="email"
+        android:inputType="textEmailAddress"
+        android:paddingTop="30dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"/>
+
+    <EditText
+        android:id="@+id/edt_Password"
+        style="@style/viewCustom"
+        android:hint="password"
+        android:inputType="textPassword"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/black"/>
+    <TextView
+        android:id="@+id/txt_registro"
+        style="@style/viewCustom"
+        android:background="@color/fondo_splash"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:textAlignment="center"
+        android:text="Registrarse"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
+
+    <LinearLayout
+        android:id="@+id/lyTerms"
+        style="@style/viewCustom"
+        android:orientation="horizontal">
+        <CheckBox
+            android:id="@+id/cbAcept"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            android:text="He leído y acepto los"
+            android:textColor="@color/black"/>
+        <TextView
+            android:id="@+id/tvTerms"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="términos y condiciones de uso"
+            android:textSize="10sp"
+            android:textColor="@color/orange"
+            android:layout_marginLeft="5dp"
+            android:onClick="goTerms"/>
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_iniciarSesion"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/fondo_splash"
+        android:paddingLeft="30dp"
+        android:text="Iniciar sesión aquí"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp" />
+
+
+</LinearLayout>
