--- a/Proyecto_integrador/app/src/main/res/values/colors.xml
+++ b/Proyecto_integrador/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="orange">#FF5722</color>
     <color name="fondo_splash">#A1D0D6</color>
 </resources>
