--- a/Proyecto_integrador/app/src/main/res/layout/activity_home.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/activity_home.xml
@@ -9,7 +9,11 @@
     <FrameLayout
         android:id="@+id/frameContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="682dp"
+        android:layout_gravity="top"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@id/navMenu"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navMenu"
@@ -18,6 +22,9 @@
         android:layout_gravity="bottom"
         android:background="@drawable/background"
         app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
+        app:itemTextColor="@color/white"
+        app:layout_anchor="@id/frameContainer"
+        app:layout_anchorGravity="bottom"
         app:menu="@menu/navegation_menu" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
