--- a/Proyecto_integrador/app/src/main/res/layout/viewholder_hourly.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/viewholder_hourly.xml
@@ -21,6 +21,7 @@
             android:textAlignment="center"
             android:layout_margin="8dp"
             android:layout_width="match_parent"
+            android:visibility="invisible"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
