--- a/Proyecto_integrador/app/src/main/res/layout/activity_splashh.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/activity_splashh.xml
@@ -7,9 +7,7 @@
     android:orientation="vertical"
     android:gravity="center_vertical"
     android:padding="5dp"
-    android:background="@drawable/background"
-    tools:context=".Activitis.MostrarAlertasFragment">
-
+    tools:context=".Activitis.Splashh">
 
     <ImageView
         android:id="@+id/imageView8"
@@ -24,8 +22,7 @@
         android:layout_margin="10dp"
         android:gravity="center_horizontal"
         android:text="ClimaTec"
-        android:textColor="@color/white"
+        android:textColor="@color/back_2"
         android:textSize="25sp"
         android:textStyle="bold" />
-
 </LinearLayout>
