--- a/Proyecto_integrador/app/src/main/res/layout/fragment_home.xml
+++ b/Proyecto_integrador/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
-                    android:text="Nublado"
+                    android:text="Soleado"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="28sp" />
@@ -40,13 +40,13 @@
                     android:layout_height="150dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="16dp"
-                    android:src="@drawable/cloudy_sunny" />
+                    android:src="@drawable/sunny" />
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Viernes 17 de Noviembre | 10:00 AM"
+                    android:text="Lunes 18 de Diciembre"
                     android:textAlignment="center"
                     android:textSize="19sp"
                     android:textColor="@color/white"
@@ -56,7 +56,7 @@
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="25º"
+                    android:text="23º"
                     android:textColor="@color/white"
                     android:textSize="63dp"
                     android:textStyle="bold"
@@ -130,7 +130,7 @@
                             android:id="@+id/textView10"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="12 Km/h"
+                            android:text="5.14 Km/h"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
@@ -163,7 +163,7 @@
                             android:id="@+id/textView12"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="18%"
+                            android:text="69%"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
@@ -191,7 +191,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_weight="1"
-                        android:text="Hoy"
+                        android:text="Esta semana"
                         android:textColor="#DCA900"
                         android:textSize="20sp"
                         android:textStyle="bold" />
